# telainoSql

./: CMakeLists.txt  README.md  cycle.cpp  cycle.h  database.cpp  database.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  telainoSql.qrc  telainoSql_pt_BR.ts  zplc.cpp  zplc.h
resource/: cam.xcf
